2015-06-14  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.1-alpha1 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.1-alpha1 final changes'
	git tag -a 4.5.1-alpha1 -m 'Version 4.5.1-alpha1 tag: Regrid from Tempest-generated map-files';git push --tags

	* Regridder works on bds output files with Tempest-generated map-files

	* Omit extensive-seeming 1D variables on 2D input grids (e.g., grd_rds_rth, grd_mrd_lng, grd_znl_lng, lat_sz, lon_sz)

2015-06-13  Charlie Zender  <zender@uci.edu>

	* Reverse ordinal number of lat and lon dimensions in src_grid_rank, dst_grid_rank

	* Modify routines to accept TempestRemap-generated maps

2015-06-11  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.0 release procedure:
 	Changes since nco-4.4.9: --map, --rnr=wgt, -A provenance, [date/time]_written, ncdismember
	cd ~/nco;git commit -a -m 'Version 4.5.0 release final changes'
	git tag -d 4.5.0;git push origin :refs/tags/4.5.0
	git tag -a 4.5.0 -m 'Version 4.5.0: Even Keel';git push --tags

	* Always cast latitudes to float before diagnosing grid type to	avoid failures with strangely-off grids

2015-06-10  Charlie Zender  <zender@uci.edu>

	* Make renormalize algorithm consider number of valid inputs when wgt_thr = 0.0, weight of valid inputs when wgt_thr > 0.0.

	* Reduce thr_nbr_max_fsh from 8 to 1 for ncwa stability with 4.5.0 release

	* Verify OpenMP with ncwa is flaky

	* Add nco_open_mem() prototype introduced in netCDF 4.4.0-rc1

	* NCO 4.5.0-beta9 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.0-beta9 final changes'
	git tag -a 4.5.0-beta9 -m 'Version 4.5.0-beta9 tag: --rnr, kvm clean-up, date_written/time_written handling';git push --tags

	* Complete --rnr/--rgr_rnr/--renormalization implementation

2015-06-09  Charlie Zender  <zender@uci.edu>

	* Implement infrastructure to renormalize destinations affected by missing values

	* Remove extraneous last character from history_of_appended_files
