@@ -1,6 +1,6 @@
 $Header$ -*-text-*-
 
-The netCDF Operators NCO version 4.5.1-alpha1 are ready. 
+The netCDF Operators NCO version 4.5.1-alpha2 are ready. 
 
 http://nco.sf.net (Homepage)
 http://dust.ess.uci.edu/nco (Homepage "mirror")
@@ -81,7 +81,7 @@ KNOWN PROBLEMS DUE TO NCO:
 
    This section of ANNOUNCE reports and reminds users of the
    existence and severity of known, not yet fixed, problems. 
-   These problems occur with NCO 4.5.1-alpha1 built/tested with netCDF
+   These problems occur with NCO 4.5.1-alpha2 built/tested with netCDF
    4.4.0-rc1 (20150610) on top of HDF5 hdf5-1.8.13 with:
 
    cd ~/nco;./configure # Configure mechanism -or-
