@@ -117,8 +117,8 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 4.5.1-alpha1
-@set doc-edition 4.5.1-alpha1
+@set nco-edition 4.5.1-alpha2
+@set doc-edition 4.5.1-alpha2
 @set copyright-years 1995--2015
 @set update-year 2015
 @set update-date 10 June 2015
